Revert "support java 8 in ReadUsedClassLoader"
This reverts commit c7fa6c3b77d45825eb68e0713b0adf6833005728.